2003-06-04  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-reader.c: 
	- style fixes
	- fixes memory leaks found and patched by Narayana Pattipati
	- fixes #110572  
	
2003-06-03  Mikael Hallendal  <micke@codefactory.se>

        * src/yelp-window.c: (window_about_cb): 
	- If About window is already showing, don't create another one.
	  Patch by Steve Chaplin, fixes #113906

2003-06-03  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-content.c: (content_reader_finished_cb):
	- Use gtp_tree_view_expand_to_path to expand the tree instead of callin
	  gtk_tree_view_expand_path on all parents. Fixes #113977

2003-06-03  Kenneth Rohde Christiansen  <kenneth@gnu.org>

	* configure.in: Added "li" (Limburgish) to ALL_LINGUAS.

2003-05-26  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>

	* configure.in: Added "cy" to ALL_LINGUAS

2003-05-06  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2003-05-01  Paul Duffy <dubhthach@frink.nuigalway.ie>

        * configure.in: Added "ga" to ALL_LINGUAS.

2003-04-24  Taneem Ahmed  <taneem@eyetap.org>

	* configure.in: Added "bn" to ALL_LINGUAS.

2003-04-15  Alex Duggan  <aldug@astrolinux.com>

	* src/yelp-window.c: Change string in about box

2003-04-07  Mikael Hallendal  <micke@codefactory.se>

        * Release 2.3.0

        * NEWS: Updated for 2.3.0
	
2003-04-05 John Fleck <jfleck@inkstain.net>

	* stylesheets/yelp-customization.xsl
	More from Shaun McCance, fixes #100415

2003-04-05 John Fleck <jfleck@inkstain.net>

	* stylesheets/yelp-customization.xsl
	More from Shaun McCance, fixes #100477

2003-04-01 John Fleck <jfleck@inkstain.net>

	* stylesheets/yelp-customization.xsl
	More from Shaun McCance, fixes #82760

2003-04-01 John Fleck <jfleck@inkstain.net>

	* stylesheets/yelp-customization.xsl
	Patch from Shaun McCance fixing #91611

2003-03-31  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-main.c: 
	- Added --with-cache-dir (not used yet).
	- Cleaned up popt mess